# Rusty50

./: .env.example  .gitignore  Cargo.toml  README.md  contributing.md  sample_stream.json
src/: engine.rs  indicators.rs  main.rs  strategy.rs  utils.rs
src/engine/: backtester.rs  execute.rs  order.rs  strategy.rs
src/indicators/: moving_average.rs  price_trend.rs  support_resistance.rs
src/strategy/: ma.rs  sample.rs
src/utils/: candle.rs  converters.rs  types.rs
