[package]
name = "stonk_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
queues = "1.0.0"
priority-queue = "1.2.0"
ordered-float = "2.0"
chrono = "0.4.19"
lru = "0.7.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

